# auto-jlp

./: .add_liq_ixs.txt.swp  .gitignore  Cargo.toml  Makefile  README.md  add_perp_liquidity  config.yaml  get_custody_metas
cli/: Cargo.toml
cli/src/: auto_depositor.rs  check_jlp_liquidity.rs  main.rs  swapper.rs
config/: Cargo.toml
config/src/: lib.rs
jupiter_api/: Cargo.toml
jupiter_api/src/: client.rs  lib.rs  swap_types.rs  swapper.rs
perpetuals/: Cargo.toml  idl.json
perpetuals/src/: jlp_cacher.rs  lib.rs
program/: Cargo.toml
program/src/: lib.rs  processor.rs
scripts/: release_cli.sh
utils/src/: lib.rs
