[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]
[dependencies.clap]
version = "4"
[dependencies.anyhow]
version = "1"
[dependencies.config]
path = "../config"
[dependencies.utils]
path = "../utils"
[dependencies.perpetuals]
path = "../perpetuals"
[dependencies.borsh]
version = "1"
[dependencies.anchor-lang]
version = "0.29"
[dependencies.solana-sdk]
version = "1.17"