[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]
[dependencies.clap]
version = "4"
[dependencies.anyhow]
version = "1"
[dependencies.config]
path = "../config"
[dependencies.utils]
path = "../utils"
[dependencies.perpetuals]
path = "../perpetuals"
[dependencies.borsh]
version = "1"
[dependencies.anchor-lang]
version = "0.26"
[dependencies.solana-sdk]
version = "1.17"
[dependencies.log]
version = "0.4"
[dependencies.spl-token]
version = "3"
[dependencies.solana-client]
version = "1.17"
[dependencies.mimalloc]
version = "*"
default-features = false
[dependencies.jupiter-cpi]
git = "https://github.com/bonedaddy/jupiter-cpi.git"
rev = "8115ff25ad1a76f46ae8045abbad5f5b99671f76"
features = ["cpi"]
[dependencies.jupiter_api]
path = "../jupiter_api"