[package]
name = "perpetuals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anchor-gen]
git = "https://github.com/bonedaddy/anchor-gen"
rev = "6aa968e295cecbadc2a12954e514df05e6d768a7"
[dependencies.anchor-lang]
version = "0.29"
[dependencies.solana-sdk]
version = "1.17"
[dependencies.solana-client]
version = "1.17"
[dependencies.anyhow]
version = "1"
[dependencies.spl-associated-token-account]
version = "2"
[dependencies.spl-token]
version = "3"
features = ["no-entrypoint"]