[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.solana-program]
version = "1.17"
[dependencies.jupiter-cpi]
git = "https://github.com/bonedaddy/jupiter-cpi.git"
rev = "8115ff25ad1a76f46ae8045abbad5f5b99671f76"
features = ["cpi"]